--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 reqwest = { version = "0.11" }
 tokio = { version = "1", features = ["full"] }
 nom = "6.1.2"
+thiserror = "1.0.24"
