--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = { version = "0.11" }
 tokio = { version = "1", features = ["full"] }
 nom = "6.1.2"
 thiserror = "1.0.24"
+anyhow = "1.0.40"
