Docs and REAdME

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,13 @@
 name = "weathernoaa"
 version = "0.1.0"
 authors = ["Sibi Prabakaran <sibi@psibi.in>"]
+readme = "README.md"
+repository = "https://github.com/psibi/rucredstash"
+authors = ["Sibi Prabakaran <sibi@psibi.in>"]
+license = "MIT"
+keywords = ["Weather", "NOAA"]
 edition = "2018"
+description = "API wrapper over NOAA's observatory data to find weather information"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
