--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "weathernoaa"
 version = "0.1.0"
 authors = ["Sibi Prabakaran <sibi@psibi.in>"]
 readme = "README.md"
-repository = "https://github.com/psibi/rucredstash"
+repository = "https://github.com/psibi/weather_noaa"
 license = "MIT"
 keywords = ["Weather", "NOAA"]
 edition = "2018"
