Add blocking variant

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "weathernoaa"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Sibi Prabakaran <sibi@psibi.in>"]
 readme = "README.md"
 repository = "https://github.com/psibi/weather_noaa"
@@ -12,7 +12,7 @@ description = "API wrapper over NOAA's observatory data to find weather informat
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11" }
+reqwest = { version = "0.11", features = ["blocking"] }
 tokio = { version = "1", features = ["full"] }
 nom = "6.1.2"
 thiserror = "1.0.24"
