--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,47 @@
-name: CI
+name: Rust
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  pull_request:
+
+env:
+  CARGO_TERM_COLOR: always
+  CARGO_INCREMENTAL: 0
+  CARGO_NET_RETRY: 10
+  RUST_BACKTRACE: short
+  RUSTUP_MAX_RETRIES: 10
 
 jobs:
-  install_stable:
+  checks:
     runs-on: ${{ matrix.os }}
+
     strategy:
+      fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+        toolchain:
+        - 1.75.0
+        - stable
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: Swatinem/rust-cache@v1
-      - name: Test
-        run: |
-          set -e
-          make check
-        shell: bash
+    - uses: actions/checkout@v4
+    - uses: extractions/setup-just@v1
+      with:
+        just-version: 1.16.0
+    - uses: Swatinem/rust-cache@v2
+    - uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: 1.75.0
+        components: clippy, rustfmt
+        targets: x86_64-unknown-linux-gnu
+    - name: Build
+      run: just compile
+    - name: Run tests
+      run: just test
+    - name: Lint
+      run: just lint
