--- a/noaa/Cargo.toml
+++ b/noaa/Cargo.toml
@@ -11,6 +11,6 @@ description = "CLI tool for interacting with NOAA station data"
 
 [dependencies]
 weathernoaa = { path = "../weathernoaa" }
-tokio = { version = "1.4.0", features = ["macros"] }
+tokio = { version = "1.35.1", features = ["macros", "rt"] }
 anyhow = "1.0.77"
 clap = { version = "4.4.12", features = ["derive"]}
